--- a/public/css/fnji-content.css
+++ b/public/css/fnji-content.css
@@ -189,3 +189,4 @@ button, input, optgroup, select, textarea {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/*  */
