--- a/public/css/common.css
+++ b/public/css/common.css
@@ -55,3 +55,15 @@ html {
 *, :after, :before {
     box-sizing: border-box;
 }
+.modal, .modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.modal-backdrop {
+    z-index: 1040;
+    background-color: #000;
+    opacity: .3;
+}
